Clearly it's been ages since I committed my changes. #oops

--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -7,3 +7,4 @@ $gray: #333333;
 
 $playfair-stack: "Playfair Display", Helvetica, Georgia, serif;
 $lato-stack: Lato, Tahoma, sans-serif;
+$merriweather-stack: Merriweather, Georgia, serif;
