--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -21,20 +21,20 @@ body {
 	width: 90%;
 	max-width: 1000px;
 	margin: 0 auto;
+
+	&.nav-visible {
+		padding-top: 10.5em;
+	}
 }
 
 a {
 	color: inherit;
 	text-decoration: none;
-	border-bottom: 1px solid $pale-yellow;
+	border-bottom: 2px solid $light-green;
 
 	&:hover {
 		border-bottom: none;
 	}
-}
-
-b {
-	font-weight: 700;
 }
 
 h1 {
@@ -42,11 +42,74 @@ h1 {
 	font-weight: 700;
 	letter-spacing: 1px;
 	margin: 1em 0;
+
+	&.sponsored {
+		padding: 10px;
+		margin: 0;
+		font-size: 1em;
+		text-align: center;
+		margin-bottom: 1em;
+	}
 }
 
 p {
+	font: 1em $lato-stack;
+	font-weight: 400;
 	margin: 1em 0;
+
+	b {
+		font-weight: 700;
+		letter-spacing: 1px;
+	}
 }
+
+ul {
+	padding-left: 2em;
+}
+
+li {
+	padding: 5px;
+}
+
+//------------------------------
+//	ICON FONT
+//------------------------------
+
+@font-face {
+	font-family: 'icomoon';
+	src:url('../icons/icomoon.eot');
+	src:url('../icons/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('../icons/icomoon.woff') format('woff'),
+		url('../icons/icomoon.ttf') format('truetype'),
+		url('../icons/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+.icon {
+	color: white;
+	font-family: 'icomoon';
+	font-size: .8em;
+	-webkit-font-smoothing: antialiased;
+}
+
+.icon-nav:before {
+	content: "\e604";
+	font-size: 3em;
+}
+
+.icon-news, .icon-calendar {
+	display: inline-block;
+}
+
+.icon-news:before {
+	content: "\e601";
+}
+
+.icon-calendar:before {
+	content: "\e602";
+}
+
 
 //------------------------------
 //	HEADER STYLES
@@ -56,11 +119,15 @@ header {
 	background: $green;
 	height: 4em;
 
-	.icon-frame {
+	a {
+			border-bottom: none;
+	}
+
+	.logo-frame {
 		float: left;
 	}
 
-	.icon {
+	.logo {
 		margin-left: 1em;
 		padding: .5em;
 		height: 3em;
@@ -78,6 +145,12 @@ header {
 			font-weight: bold;
 		}
 
+		@media screen and (max-width: 600px) {
+			.mobile-hide {
+				display: none;
+			}
+		}
+
 		.highlight {
 			@include transition(color);
 		}
@@ -85,6 +158,66 @@ header {
 		&:hover {
 			.highlight {
 				color: $light-green;
+			}
+		}
+	}
+
+	nav {
+
+		.mobile-nav {
+			float: right;
+			display: none;
+			padding: 1em 1em 0 0;
+		}
+
+		ul.desktop {
+			float: right;			
+			margin-top: 1.1em;
+
+			li {
+				display: inline-block;
+				background: $light-green;
+				border-radius: 5px;
+
+				margin: 0 1em 0 0;
+				padding: .3em .7em .4em .7em;
+
+				color: $blue;
+
+				@include transition(background);
+
+				&:hover {
+					background: darken($light-green, 10%);
+				}
+			}
+		}
+
+		ul.mobile {
+			padding: 0;
+			margin: 0;
+			float: left;
+			width: 100%;
+			background: $gray;
+			display: block;
+
+			li {
+				width: 100%;
+				list-style: none;
+				text-align: center;
+				padding: .75em 0;
+
+				border-bottom: 1px darken($gray, 10%) solid;
+
+				a {
+					display: inline-block;
+					width: 100%;
+				}
+
+				@include transition(background);
+
+				&:hover {
+					background: darken($gray, 10%);
+				}
 			}
 		}
 	}
@@ -98,9 +231,86 @@ header {
 	min-height: 100%;
 	height: auto !important;
 	height: 100%;
-	margin: 0 auto -155px; /* the bottom margin is the negative value of the footer's height */
+	margin: 0 auto -10em; /* the bottom margin is the negative value of the footer's height */
+	@media screen and (max-width: 1024px) {
+		margin: 0 auto -15em;
+	}
+	@media screen and (max-width: 600px) {
+		margin: 0 auto -24em;
+	}
 }
 
-.footer, .push {
-	height: 155px; /* .push must be the same height as .footer */
+footer {
+	padding: 10px;
+	background: $gray;
+
+	.desktop {
+		@media screen and (max-width: 1024px) {
+			display: none;
+		}
+	}
+
+	.tablet {
+		display: none;
+		@media screen and (max-width: 1024px) {
+			display: block;
+		}
+		@media screen and (max-width: 600px) {
+			display: none;
+		}
+	}
+
+	.mobile {
+		display: none;
+		@media screen and (max-width: 600px) {
+			display: block;
+		}
+	}
+
+	tbody {
+		width: 100%;
+	}
+
+	table {
+		text-align: center;
+		width: 100%;
+
+		.desktop-hide {
+			display: none;
+		}
+
+		td {
+			width: 25%;
+		}
+
+		img { 
+			-webkit-filter: grayscale(100%);
+			-moz-filter: grayscale(100%);
+			filter: grayscale(100%);
+
+			@include transition(filter);
+			@include transition(-webkit-filter);
+			@include transition(-moz-filter);
+
+			&:hover {
+				-webkit-filter: grayscale(0%);
+				-moz-filter: grayscale(0%);
+				filter: grayscale(0%);
+			}
+		}
+	}
+}
+
+footer, .push {
+	height: 10em; /* .push must be the same height as .footer */
+	@media screen and (max-width: 1024px) {
+		height: 15em;
+	}
+	@media screen and (max-width: 600px) {
+		height: 24em;
+	}
+
+	a {
+		border-bottom: none;
+	}
 }
