--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -4,7 +4,8 @@ $light-green: #AAC789;
 $green: #437356;
 $blue: #1E4147;
 $gray: #333333;
+$pink: #F34A53;
 
 $playfair-stack: "Playfair Display", Helvetica, Georgia, serif;
 $lato-stack: Lato, Tahoma, sans-serif;
-$merriweather-stack: Merriweather, Georgia, serif;
+$open-sans-stack: "Open Sans", Tahoma, sans-serif;
