--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -2,5 +2,5 @@
 	-webkit-transition: $trans 0.15s ease-in;
 	-moz-webkit-transition: $trans 0.15s ease-in;
 	-o-webkit-transition: $trans 0.15s ease-in;
-	transition: $trans 0.15 ease-in;
+	transition: $trans 0.15s ease-in;
 }
