--- a/css/pages/_news.scss
+++ b/css/pages/_news.scss
@@ -8,7 +8,7 @@
 		background: $green;
 		border-radius: 5px 5px 0 0;
 		padding: 5px 5px 5px 10px;
-		font-weight: 300;
+		font-weight: 400;
 	}
 
 	h3 {
@@ -22,5 +22,13 @@
 
 	p {
 		padding: 0 10px;
+	}
+}
+
+ul.year-selection {
+	list-style: none;
+
+	li {
+		display: inline-block;
 	}
 }
