Updated year selection appearance

--- a/css/_globals.scss
+++ b/css/_globals.scss
@@ -195,6 +195,9 @@ header {
 			li {
 				display: inline-block;
 				background: $light-green;
+				
+				-webkit-border-radius: 5px;
+				-moz-border-radius: 5px;
 				border-radius: 5px;
 
 				margin: 0 1em 0 0;
