--- a/css/pages/_news.scss
+++ b/css/pages/_news.scss
@@ -6,6 +6,8 @@
 	h2 {
 		color: white;
 		background: $green;
+		-webkit-border-radius: 5px 5px 0 0;
+		-moz-border-radius: 5px 5px 0 0;
 		border-radius: 5px 5px 0 0;
 		padding: 5px 5px 5px 10px;
 		font-weight: 400;
@@ -16,6 +18,8 @@
 		background: $gray;
 		font-size: .8em;
 		padding: 5px 5px 5px 10px;
+		-webkit-border-radius: 0 0 5px 5px;
+		-moz-border-radius: 0 0 5px 5px;
 		border-radius: 0 0 5px 5px;
 		font-weight: normal;
 	}
